--- a/.env.exemple
+++ b/.env.exemple
@@ -1,10 +1,10 @@
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
+DATABASE_URL=
+CRYPTO_HASH=
+DROPBOX_ACCESS_TOKEN=
 GITHUB_CLIENT_ID=
 GITHUB_SECRET=
-GITHUB_LOGIN=
-GITHUB_REDIRECT=
-DROPBOX_ACCESS_TOKEN=
-YOUTUBE_API_KEY=
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+YOUTUBE_CLIENT_ID=
+YOUTUBE_CLIENT_SECRET=
+WEB_CLIENT_HOST=
