--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,4 @@
 tasks:
   - name: Start development environment
-    init: npm install
-    command: npm run dev
+    init: yarn install
+    command: yarn run start
