--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,8 @@
     "rules": {
         "no-redeclare": "off",
         "@typescript-eslint/no-redeclare": ["error"],
+        "no-dupe-class-members":"off",
+        "@typescript-eslint/no-dupe-class-members": ["error"],
         "no-use-before-define": "off",
         "react/prop-types": "off",
         "@typescript-eslint/no-use-before-define": [
