--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-range": "^1.8.11",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-shimmer": "^3.1.3",
     "react-spring": "^9.3.0",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1",
