--- a/package.json
+++ b/package.json
@@ -1,31 +1,30 @@
 {
-  "name": "app",
+  "name": "test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.3.0",
     "@react-spring/web": "^9.3.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.19",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "axios": "^0.23.0",
     "jsstore": "^4.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable-list": "^4.0.4",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-palette": "^1.0.2",
     "react-range": "^1.8.11",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "react-shimmer": "^3.1.3",
+    "react-scripts": "5.0.0",
     "react-spring": "^9.3.0",
-    "typescript": "^4.4.2",
-    "web-vitals": "^1.0.1",
+    "typescript": "^4.5.4",
+    "web-vitals": "^2.1.3",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
     "workbox-cacheable-response": "^5.1.3",
@@ -40,10 +39,10 @@
     "workbox-streams": "^5.1.3"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -68,7 +67,7 @@
     "@types/react-router-dom": "^5.3.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "autoprefixer": "^9",
+    "autoprefixer": "^10.4.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
@@ -78,8 +77,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.26.1",
-    "postcss": "^7",
+    "postcss": "^8.4.5",
     "prettier": "^2.4.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "tailwindcss": "^3.0.12"
   }
 }
